--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
@@ -67,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/google.maps": "^3.51.0",
     "gh-pages": "^3.2.3"
   }
 }
